samples/_failures_safe/1761201149_28cb3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_115b0753.c: In function ‘main’:
./samples/SAFE/__tmp_115b0753.c:142:42: error: expected ‘;’ at end of input
  142 |     for (size_t i = 0; i < compressed_len
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_115b0753.c:142:5: error: expected declaration or statement at end of input
  142 |     for (size_t i = 0; i < compressed_len
      |     ^~~
